--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.12",
+    "vue-axios": "^2.1.5",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
